<resources>
    <string name="app_name">BTAr2812</string>
    <string name="int_fade">Fade</string>
    <string name="int_interval">Interval</string>
    <string name="int_ampli">Width</string>
    <string name="int_shift">Shift</string>
    <string name="int_cont">Continuous</string>
    <string name="int_speed">Speed</string>
    <string name="int_bright">Bright</string>
    <string name="int_init">Initializing...</string>
    <string name="int_nobt">Device not support Bluetooth</string>
    <string name="int_conIn">Connecting device</string>
    <string name="int_excSock">"Socket exception: "</string>
    <string name="int_creatSock">Socket created</string>
    <string name="int_btReady">Ready!</string>
    <string name="int_excCreaSock">"Socket creation exception: "</string>
    <string name="int_excCloSock">"Socket close exception: "</string>
    <string name="int_selDev">Select device</string>
    <string name="int_btActive">Bluetooth active</string>
    <string name="int_ledCount">Led quantity</string>
    <string name="int_matrix">Matrix</string>
    <string name="int_staticmatrix">Static</string>
    <string name="int_matrixlong">Seq.</string>
    <string name="int_initBT">Select device</string>
    <string name="pref_leds" translatable="false">0</string>
    <string name="int_repet" translatable="false">Rep.</string>
    <string name="int_random" translatable="false">Random</string>
    <string name="int_CloSock">Socket closed!</string>
</resources>