<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:visibility="visible"
    tools:context=".FragmentAdress">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000"
        android:visibility="visible">


        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="16dp"
            android:text="@string/int_random"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent" />

        <SeekBar
            android:id="@+id/shiftv"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="24dp"
            android:max="10"
            app:layout_constraintBottom_toTopOf="@+id/interval"
            app:layout_constraintEnd_toEndOf="parent" />

        <SeekBar
            android:id="@+id/slideBrillo"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="20dp"
            android:max="50"
            app:layout_constraintBottom_toTopOf="@+id/matrixCheck2"
            app:layout_constraintEnd_toEndOf="parent" />

        <SeekBar
            android:id="@+id/repeat"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="24dp"
            android:max="15"
            app:layout_constraintBottom_toTopOf="@+id/slideBrillo"
            app:layout_constraintEnd_toEndOf="parent" />

        <SeekBar
            android:id="@+id/interval"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="24dp"
            android:max="20"
            app:layout_constraintBottom_toTopOf="@+id/repeat"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="20dp"
            android:text="@string/int_repet"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="16dp"
            android:text="@string/int_interval"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="65dp"
            android:text="@string/int_bright"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/galeria"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="207dp"
            android:layout_height="188dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="20dp"
            android:background="#222121"
            app:layout_constraintBottom_toTopOf="@+id/shiftv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/galeria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@android:drawable/ic_menu_gallery" />

        <CheckBox
            android:id="@+id/matrixCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="100dp"
            android:text="@string/int_matrix"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/matrixCheck2" />

        <CheckBox
            android:id="@+id/matrixCheck2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="100dp"
            android:enabled="false"
            android:text="@string/int_staticmatrix"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/matrixCheck3" />

        <CheckBox
            android:id="@+id/matrixCheck3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="100dp"
            android:enabled="false"
            android:text="@string/int_matrixlong"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>

