<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentLed">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginStart="72dp"
            android:layout_marginBottom="32dp"
            android:text="@string/int_ampli"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginStart="72dp"
            android:layout_marginBottom="20dp"
            android:text="@string/int_interval"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginStart="72dp"
            android:layout_marginBottom="20dp"
            android:text="@string/int_fade"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:text="Inv."
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/invfade"
            app:layout_constraintStart_toStartOf="parent" />

        <SeekBar
            android:id="@+id/amp"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="32dp"
            android:max="16"
            android:progress="16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <SeekBar
            android:id="@+id/espacio"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="30dp"
            android:max="32"
            android:progress="0"
            android:scrollbarStyle="outsideInset"
            app:layout_constraintBottom_toTopOf="@+id/amp"
            app:layout_constraintEnd_toEndOf="parent" />

        <SeekBar
            android:id="@+id/fade"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="30dp"
            android:max="16"
            android:progress="0"
            android:scrollbarStyle="outsideInset"
            app:layout_constraintBottom_toTopOf="@+id/espacio"
            app:layout_constraintEnd_toEndOf="parent" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="64dp"
            android:layout_height="24dp"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/brightnessSlide" />

        <CheckBox
            android:id="@+id/invamplitud"
            android:layout_width="49dp"
            android:layout_height="28dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView"
            app:layout_constraintStart_toStartOf="parent" />

        <CheckBox
            android:id="@+id/invintervalo"
            android:layout_width="49dp"
            android:layout_height="28dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/invamplitud"
            app:layout_constraintEnd_toStartOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent" />

        <CheckBox
            android:id="@+id/invfade"
            android:layout_width="49dp"
            android:layout_height="28dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/invintervalo"
            app:layout_constraintEnd_toStartOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent" />

        <com.skydoves.colorpickerview.ColorPickerView
            android:id="@+id/colorPickerView"
            android:layout_width="256dp"
            android:layout_height="256dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <com.skydoves.colorpickerview.sliders.BrightnessSlideBar
            android:id="@+id/brightnessSlide"
            android:layout_width="200dp"
            android:layout_height="32dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            app:borderColor_BrightnessSlider="@android:color/darker_gray"
            app:borderSize_BrightnessSlider="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/colorPickerView"
            app:selector_BrightnessSlider="@drawable/wheel" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>